[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Background/Esileht/Nupp_edasi_all.png" type="Texture" id=1]
[ext_resource path="res://assets/Background/Esileht/Nupp_katkesta.png" type="Texture" id=2]
[ext_resource path="res://assets/Background/Esileht/Leveli_end_var_b.png" type="Texture" id=3]
[ext_resource path="res://src/Tase_läbitud.gd" type="Script" id=4]
[ext_resource path="res://assets/Background/Esileht/Nupp_katkesta_all.png" type="Texture" id=5]
[ext_resource path="res://assets/Background/Esileht/Nupp_edasi.png" type="Texture" id=6]

[node name="Tase_läbitud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="taust_FINAL (1)" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.31183
margin_top = 2.34064
margin_right = -2.31201
margin_bottom = 2.34058
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edasi" type="TextureButton" parent="."]
margin_left = 1652.84
margin_top = 834.939
margin_right = 1910.84
margin_bottom = 1092.94
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Katkesta" type="TextureButton" parent="."]
margin_left = 35.4033
margin_top = 860.75
margin_right = 181.403
margin_bottom = 1068.75
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Edasi" to="." method="_on_Edasi_pressed"]
[connection signal="pressed" from="Katkesta" to="." method="_on_Katkesta_pressed"]
